--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "excercise"]
 	path = excercise
 	url = git@github.com:binoopnanu/excercise.git
+[submodule "kubernetes-kafka"]
+	path = kubernetes-kafka
+	url = https://github.com/Yolean/kubernetes-kafka.git
